objects/BofI_Products_SFDC2__c.object
<CustomObject>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bank of Internet</fullName>
                </value>
                <value>
                    <fullName>Bank X</fullName>
                </value>
                <value>
                    <fullName>BofI Advisor</fullName>
                </value>
                <value>
                    <fullName>BofI Federal Bank</fullName>
                </value>
                <value>
                    <fullName>Nat&apos;l Wild Turkey Federation</fullName>
                </value>
                <value>
                    <fullName>Specialty Deposits</fullName>
                </value>
                <value>
                    <fullName>UFB Direct</fullName>
                </value>
                <value>
                    <fullName>Virtus Bank</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <label>Product Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Class__c</fullName>
        <label>Sub-Class</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>BofI Products</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>BofI Products Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BofI Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>